force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/Acccount__c.object-meta.xml
<CustomObject>
    <description>test account custom object</description>
    <label>Acccount</label>
    <nameField>
        <label>Acccount Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>