force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Test Help Text</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>