force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/fields/sample_date__c.field-meta.xml
<CustomField>
    <fullName>sample_date__c</fullName>
    <inlineHelpText>test change</inlineHelpText>
    <label>sample date</label>
    <type>DateTime</type>
</CustomField>