force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <label>Test</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>1111</fullName>
            </value>
            <value>
                <fullName>AAAA</fullName>
            </value>
            <value>
                <fullName>BBBB</fullName>
            </value>
            <value>
                <fullName>CCCC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>