force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/recordTypes/Record_type_1.recordType-meta.xml
<RecordType>
    <fullName>Record_type_1</fullName>
    <active>true</active>
    <label>Record type 1</label>
</RecordType>