force-app/main/default/_fdtlt82/Flex-Sandbox/objects/Acccount__c/validationRules/test_validation_v1.validationRule-meta.xml
<ValidationRule>
    <fullName>test_validation_v1</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(sample_date__c  )</errorConditionFormula>
    <errorDisplayField>sample_date__c</errorDisplayField>
    <errorMessage>this sample date field cant be cannot be blank</errorMessage>
</ValidationRule>